Refact: Atualizando o código e usando os dados do BD.